--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,17 +4,17 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
-    url: '#about'
+  - name: 
+    url: #about
     weight: 10
-  - name: Experience
-    url: '#posts'
+  - name: Skills
+    url: #skills
     weight: 20
-  - name: Projects
-    url: '#projects'
+  - name: Experience
+    url: #experience
     weight: 30
   - name: Contact
-    url: '#contact'
+    url: #contact
     weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
