--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,6 +13,9 @@ main:
   - name: Experience
     url: "#experience"
     weight: 30
+  - name: Projects
+    url: "#projects"
+    weight: 30
   - name: Contact
     url: "#contact"
     weight: 40
